# CIRISVerify

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Cross.toml  MISSION.md  README.md  cbindgen.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: CODEOWNERS
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/ciris_verify/: __init__.py  _accord_custody.py  _bin_sign.py  _bin_verify.py  _canonical_subject.py  _epoch_key.py  _federation_identity.py  _jcs.py  _manifest_contribution.py  _operational_admit.py  _rns_dest_hash.py  _scope_privacy.py  _self_enc.py  _test_anchor.py  _wheel_hybrid_kex.py  _wheel_key_grant.py  _wheel_locale_merkle.py  _wheel_reconsider_dos.py  _wheel_skill_import.py  client.py  exceptions.py  types.py
bindings/python/ciris_verify/_bin/: .gitkeep
bindings/python/tests/: __init__.py  test_client.py  test_memory_baseline.py  test_types.py
src/ciris-build-tool/: Cargo.toml
src/ciris-build-tool/src/: lib.rs  register.rs  sign.rs  verify.rs
src/ciris-build-tool/tests/: parity_with_verify_tree.rs
src/ciris-crypto/: Cargo.toml
src/ciris-crypto/benches/: federation_crypto.rs  liboqs_comparison.rs
src/ciris-crypto/src/: aes_gcm.rs  ecdsa.rs  ed25519.rs  epoch_key.rs  error.rs  hmac.rs  hpke.rs  hybrid.rs  hybrid_kex.rs  kdf.rs  key_grant.rs  lib.rs  ml_dsa.rs  ml_kem.rs  random.rs  rng_health.rs  scope_privacy.rs  secp256k1.rs  self_enc.rs  types.rs  x25519.rs  xchacha.rs
src/ciris-crypto/tests/: crypto_properties.rs
src/ciris-keyring/: Cargo.toml
src/ciris-keyring/benches/: storage_descriptor.rs
src/ciris-keyring/examples/: tpm_attest.rs
src/ciris-keyring/src/: error.rs  hw_token.rs  keyring_storage.rs  lib.rs  local_seed.rs  pkcs11.rs  pqc.rs  rt.rs  sealed_ed25519.rs  sealed_mldsa65.rs  self_enc_keys.rs  signer.rs  software.rs  steward_seed.rs  tpm_plugin.rs  transport_identity.rs  types.rs  usb_wrapped_mldsa65.rs  user_identity.rs
src/ciris-keyring/src/platform/: android.rs  factory.rs  ios.rs  mod.rs  tpm.rs  tpm_plugin_signer.rs  tpm_windows.rs
src/ciris-keyring/src/platform/tpm/: detection.rs  keys.rs  mod.rs  quote.rs  signing.rs  wrapping.rs
src/ciris-keyring/src/storage/: android.rs  ios.rs  mod.rs  tpm.rs  tpm_plugin_storage.rs
src/ciris-keyring/tests/: tpm_plugin_load.rs
src/ciris-manifest-tool/: Cargo.toml
src/ciris-manifest-tool/src/: main.rs  manifest.rs
src/ciris-manifest-tool/src/parser/: elf.rs  macho.rs  mod.rs  pe.rs
src/ciris-tpm-plugin/: Cargo.toml
src/ciris-tpm-plugin/src/: backend.rs  lib.rs
src/ciris-verify-core/: Cargo.toml  build.rs
src/ciris-verify-core/benches/: build_manifest.rs  key_derivation.rs  transparency_merkle.rs
src/ciris-verify-core/examples/: validate_yubikey_attestation.rs
src/ciris-verify-core/src/: accord_custody_attestation.rs  accord_genesis.rs  accord_live_quorum.rs  app_attest.rs  attest_bundle.rs  attest_heartbeat.rs  audit.rs  binary_format.rs  cache.rs  canonical_subject.rs  ceg_error.rs  ceg_outbox.rs  config.rs  dns.rs  doc_integrity.rs  engine.rs  error.rs  fedcode.rs  federation_envelope.rs  federation_identity.rs  federation_keyset.rs  federation_provenance.rs  federation_self_record.rs  hardware_info.rs  holds_bytes.rs  http_client.rs  https.rs  humanity_accord.rs  infrastructure_community.rs  jcs.rs  jwt.rs  keys.rs  lib.rs  license.rs  locale_merkle.rs  manifest_cache.rs  manifest_contribution.rs  mobile_http.rs  operational_admit.rs  parallel_race.rs  (+20 more)
src/ciris-verify-core/src/genesis/: founder_pubkeys.json
src/ciris-verify-core/src/holonomic/: aggregation.rs  alm.rs  av_chunk.rs  bootstrap.rs  fountain.rs  mod.rs  preimage.rs  storage_contention.rs  wholeness_witness.rs
src/ciris-verify-core/src/security/: anti_tamper.rs  build_manifest.rs  file_integrity.rs  function_integrity.rs  mod.rs  platform.rs
src/ciris-verify-core/tests/: accord_ceremony_custody.rs  alloc_stability.rs  conformance_vectors_v19.rs  conformance_vectors_v19_7.rs  security_properties.rs  validation_properties.rs
src/ciris-verify-core/tests/it/: main.rs  security.rs  validation.rs
src/ciris-verify-core/tests/vectors/holonomic_v19/: domain_separators.json  schema_versions.json
src/ciris-verify-core/tests/vectors/holonomic_v19/fountain_compress_request/: canonical_bytes.json
src/ciris-verify-core/tests/vectors/holonomic_v19/fountain_holding_claim/: canonical_bytes.json
src/ciris-verify-core/tests/vectors/holonomic_v19/merkle_root/: empty_sentinel.json  lex_sort_invariance.json  single_leaf.json  three_leaves_odd_dup.json
src/ciris-verify-core/tests/vectors/holonomic_v19/signed_claim/: canonical_bytes_no_owner_binding.json  canonical_bytes_with_owner_binding.json
src/ciris-verify-core/tests/vectors/holonomic_v19/wholeness_witness/: canonical_preimage_empty.json  canonical_preimage_three_namespaces.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/: domain_separators.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/aggregation_meta/: canonical_bytes.json  canonical_bytes_v2.json  canonical_bytes_v3.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/corpus_want/: canonical_bytes.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/descend/: ordered_list.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/member_commitment/: empty.json  single.json  three_unsorted.json
src/ciris-verify-core/tests/vectors/holonomic_v19_7/storage_budget/: canonical_bytes.json
src/ciris-verify-ffi/: Cargo.toml
src/ciris-verify-ffi/data/: bootstrap_stewards.json
src/ciris-verify-ffi/src/: android_sync.rs  bootstrap_keyset.rs  callback_signer.rs  conformance.rs  constructor.rs  ios_sync.rs  lib.rs  wheel_accord_custody.rs  wheel_canonical_subject.rs  wheel_epoch_key.rs  wheel_hybrid_kex.rs  wheel_jcs.rs  wheel_key_grant.rs  wheel_locale_merkle.rs  wheel_manifest_contribution.rs  wheel_operational_admit.rs  wheel_reconsider_dos.rs  wheel_rns_dest_hash.rs  wheel_scope_privacy.rs  wheel_self_enc.rs  wheel_skill_import.rs
(+78 files in other folders)
