[workspace]
resolver = "2"
members = [
    "src/ciris-keyring",
    "src/ciris-crypto",
    "src/ciris-verify-core",
    "src/ciris-verify-ffi",
    "src/ciris-manifest-tool",
]

[workspace.package]
version = "0.8.10"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cirisai/ciris-verify"
authors = ["CIRIS L3C <engineering@ciris.ai>"]

[workspace.dependencies]
# Async runtime (Veilid-compatible)
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf (Veilid-compatible)
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
tonic-build = "0.10"

# Classical cryptography
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"

# Post-quantum cryptography (evaluate: aws-lc-rs vs ml-dsa)
# ml-dsa = "0.1"  # RustCrypto - unaudited
# aws-lc-rs = { version = "1.5", features = ["unstable"] }  # AWS - pending FIPS

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# Random
rand = "0.8"
rand_core = "0.6"

# Base64
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SQLite for audit verification
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging (Veilid-compatible)
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# DNS (with DNS-over-HTTPS for mobile compatibility)
# native-certs: uses platform's native certificate store (important for Android)
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime", "native-certs"] }

# HTTP client
# Uses rustls with bundled Mozilla CA certs (webpki-roots) for cross-platform compatibility
# This works on Android where rustls-native-certs fails to find system certs
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Blocking HTTP client for Android (tokio async I/O doesn't work on JNI threads)
# Uses rustls with native-certs on desktop, native-tls on Android
ureq = { version = "2.9", default-features = false, features = ["json"] }
# Bundled Mozilla CA certificates (fallback)
webpki-roots = "0.26"

# Internal crates
ciris-keyring = { path = "src/ciris-keyring" }
ciris-crypto = { path = "src/ciris-crypto" }
ciris-verify-core = { path = "src/ciris-verify-core" }

# Binary parsing (ELF, Mach-O, PE)
goblin = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Constructor for early initialization
ctor = "0.2"

# Testing (workspace dev-dependencies)
proptest = "1.5"
test-case = "3.3"
pretty_assertions = "1.4"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
