[workspace]
resolver = "2"
members = [
    "src/ciris-keyring",
    "src/ciris-tpm-plugin",
    "src/ciris-crypto",
    "src/ciris-verify-core",
    "src/ciris-verify-ffi",
    "src/ciris-manifest-tool",
    "src/ciris-build-tool",
]

[workspace.package]
version = "9.0.1"
edition = "2021"
rust-version = "1.86"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cirisai/ciris-verify"
authors = ["CIRIS L3C <engineering@ciris.ai>"]

[workspace.dependencies]
# Async runtime (Veilid-compatible)
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Classical cryptography
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"

# Post-quantum cryptography (evaluate: aws-lc-rs vs ml-dsa)
# ml-dsa = "0.1"  # RustCrypto - unaudited
# aws-lc-rs = { version = "1.5", features = ["unstable"] }  # AWS - pending FIPS

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# Random
rand = "0.8"
rand_core = "0.6"

# Base64
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SQLite for audit verification.
#
# v4.3.0 (CIRISVerify#43 / CIRISPersist#132 / CIRISPersist#133):
# `bundled` removed at workspace level. Each consuming crate enables
# it ONLY via a target-conditional override
# (`[target.'cfg(target_os = "android")'.dependencies]`). On every
# other target (Linux / macOS / Windows / iOS) rusqlite links
# dynamically against the platform's libsqlite3 → ONE library
# instance shared across cdylibs via dlopen → no cross-cdylib SIGSEGV
# class for downstream cohabitation consumers (CIRISEdge#50 / persist's
# OutboundQueue + VerifyDirectory + RootingDirectory + ...).
#
# Pre-4.3.0 workspace default was `bundled = true` for every target,
# which propagated through `ciris-verify-core` into every desktop
# wheel and silently overrode persist's v3.5.2 target-narrowed override.
rusqlite = { version = "0.31" }

# Logging (Veilid-compatible)
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# DNS (with DNS-over-HTTPS for mobile compatibility). 0.25 restructured the
# feature set: tokio-runtime→tokio, dns-over-https-rustls→https-ring (ring backend,
# matching the repo's force-ring policy), native-certs→rustls-platform-verifier.
# 0.25 moves to http 1.0 / rustls 0.23, collapsing the old http-0.2/rustls-0.21
# duplicate cluster (CIRISVerify#165). webpki-roots: bundled Mozilla CA fallback.
hickory-resolver = { version = "0.25", features = ["https-ring", "tokio", "webpki-roots"] }

# HTTP client
# Uses rustls with bundled Mozilla CA certs (webpki-roots) for cross-platform compatibility
# This works on Android where rustls-native-certs fails to find system certs
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Blocking HTTP client for Android (tokio async I/O doesn't work on JNI threads)
# Uses rustls with native-certs on desktop, native-tls on Android
ureq = { version = "2.9", default-features = false, features = ["json"] }
# Bundled Mozilla CA certificates (fallback)
webpki-roots = "0.26"

# Internal crates
ciris-keyring = { path = "src/ciris-keyring" }
ciris-crypto = { path = "src/ciris-crypto" }
ciris-verify-core = { path = "src/ciris-verify-core" }

# Binary parsing (ELF, Mach-O, PE)
goblin = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Constructor for early initialization
ctor = "0.2"

# Testing (workspace dev-dependencies)
proptest = "1.5"
test-case = "3.3"
pretty_assertions = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
# v2.0.1+: panic = "unwind" so the 57 `ffi_guard!`/`catch_unwind` sites in
# ciris-verify-ffi actually catch — under panic = "abort" they're no-ops
# and a panic SIGABRTs the host process. Long-lived embedders (Python via
# Chaquopy / iOS bindings / Node-FFI) get a typed error instead of a
# worker reset. See CIRISVerify#18 + persist's incident writeup for the
# pattern (CIRISPersist#25/#26/#27). Cost: marginally larger binary,
# negligible runtime overhead.
panic = "unwind"
strip = true

# Dev profile: disable incremental compilation.
#
# The `target/debug/incremental/` query cache is hash-keyed per change and is
# never garbage-collected — it grows monotonically. For a workspace where we
# bump `workspace.version` frequently (every release invalidates ALL
# incremental keys at once), the cache provides no benefit and costs the bulk
# of `target/debug/` size. A 2026-05-04 dev session that did six bumps
# (v1.8.5 → v1.10.2) accumulated ~180GB in `target/debug/` before the
# filesystem ran out and shell tooling started failing. Disabling incremental
# keeps `target/debug/` proportional to actual artifacts, not change history.
#
# Trade-off: clean rebuilds after every change instead of incremental rebuilds.
# Acceptable here because (a) workspace version churn already invalidated
# the cache anyway, and (b) `cargo check` (no codegen) covers the
# tight-feedback-loop case faster than `cargo build` ever did.
[profile.dev]
incremental = false
