[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciris-verify"
version = "0.6.2"
description = "Python bindings for CIRISVerify hardware-rooted license verification"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "CIRIS Engineering", email = "engineering@ciris.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CIRISAI/CIRISVerify"
Repository = "https://github.com/CIRISAI/CIRISVerify"
Documentation = "https://github.com/CIRISAI/CIRISVerify/tree/main/bindings/python"
Issues = "https://github.com/CIRISAI/CIRISVerify/issues"

[tool.setuptools.packages.find]
include = ["ciris_verify*"]

[tool.setuptools.package-data]
ciris_verify = [
    "py.typed",
    "libciris_verify_ffi.so",
    "libciris_verify_ffi.dylib",
    "ciris_verify_ffi.dll",
]
