[package]
name = "ciris-build-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "BuildManifest sign/verify CLIs for CIRIS PoB federation peers"

[[bin]]
name = "ciris-build-sign"
path = "src/sign.rs"

[[bin]]
name = "ciris-build-verify"
path = "src/verify.rs"

[lib]
name = "ciris_build_tool"
path = "src/lib.rs"

[dependencies]
# CLI
clap.workspace = true

# Cryptography (needs PQC feature for ML-DSA-65 build manifest signing)
ciris-crypto = { workspace = true, features = ["pqc-ml-dsa"] }

# Random for keypair generation
rand_core = { version = "0.6", features = ["std"] }

# Core types
ciris-verify-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Hashing
sha2.workspace = true

# Encoding
base64.workspace = true
hex.workspace = true

# Time
chrono = { version = "0.4", features = ["serde", "clock"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# `register` subcommand (v1.10.0+): writes builds + binary_manifests +
# function_manifests via Registry HTTP + gRPC endpoints. Mirrors the legacy
# CIRISAgent register_agent_build.py + register_signed_manifest.py path that
# was retired in agent 2.7.8.4 / 2.7.8.5 without verifying parent-row
# coverage. See CIRISVerify#6.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }

[lints.clippy]
# CLI utility crate — workspace-wide pedantic/nursery lints add noise
# without catching real bugs here. Match the pattern in other tool crates.
all = "warn"
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
# But keep the workspace's safety-critical lints active
unwrap_used = "warn"
expect_used = "warn"
