[package]
name = "ciris-crypto"
description = "Hybrid cryptography (classical + PQC) for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `random` is in default since v4.9.0 (CIRISVerify#55): the RNG facade
# + SP 800-90B startup health-check (`rng_health`) must always be
# compiled so the fail-secure gate is present in every shipped build.
# Zero added dependency cost — `rand_core` is already non-optional.
default = ["ecdsa-p256", "ed25519", "secp256k1", "random"]
ecdsa-p256 = ["p256"]
ed25519 = ["ed25519-dalek"]
secp256k1 = ["k256"]
# PQC feature - enable one of these
pqc-ml-dsa = ["ml-dsa", "rand_chacha", "dep:pkcs8", "dep:zeroize"]
pqc-aws-lc = ["aws-lc-rs"]

# v2.0+ — federation symmetric / KDF / MAC / RNG primitives. Each is
# its own feature so consumers (CIRISPersist#19's federated SecretsService,
# CIRISEdge#3's at-rest crypto, etc.) can pick the surface they need.
# The federation's threat model centralizes these in ciris-crypto so
# consumers never reach into RustCrypto crates directly. See CIRISVerify#7.
aes-gcm = ["dep:ring"]   # v2.8.0+: AES-256-GCM via ring — see CIRISVerify#26
kdf = ["dep:pbkdf2"]   # hkdf is already a non-optional dep (used by secp256k1 wallet)
hmac = ["dep:hmac"]
random = []  # uses rand_core::OsRng — already pulled in by rand_core dep
# v4.4.0+ (CIRISVerify#44 / CIRISNodeCore MEDIA_SHARING.md §6.3):
# X25519 ECDH primitive + HPKE-RFC-9180-base-mode-shaped key-grant
# wrap/unwrap (`x25519-aes256-gcm-hkdf-sha256`). Multimedia tier
# crypto surface for restricted-group + subscription-routed content.
x25519 = ["dep:x25519-dalek"]
key-grant = ["x25519", "aes-gcm", "kdf", "random"]
# v4.6.0+ (CIRISVerify#47): Gap C closure — hybrid X25519 + ML-KEM-768
# KEX with HKDF-SHA256 binding. Closes Fed TM §3.3 Gap C (harvest-now-
# decrypt-later vulnerability).
ml-kem = ["dep:ml-kem"]
hybrid-kex = ["x25519", "ml-kem", "kdf", "random"]
# v4.8.x+ (CIRISVerify#53): liboqs cross-check bench. Gates the `oqs`
# dev-dep so the (expensive cmake) liboqs build is only paid when the
# bench is exercised. Off by default — `cargo bench` from CI's default
# feature set will continue to skip the comparison bench entirely.
bench-liboqs = ["dep:oqs"]
# v6.3.0+ (CIRISVerify#82, CEWP SCOPE_PRIVACY.md): scope-native privacy
# crypto surface — the first cut in the cross-cdylib lockstep cascade.
#  - `xchacha`       — XChaCha20-Poly1305 AEAD (24-byte nonce), the §2.4
#                      symbol-envelope + §3.1 uniform-framing cipher.
#  - `hpke`          — RFC 9180 mode_base over the X-Wing hybrid KEM
#                      (`hybrid-kex`), the §3.3 Welcome-wrap KEM. AES-256-GCM
#                      AEAD via `aes-gcm`. Sender-auth is a caller-side
#                      ML-DSA-65 signature over the encap (existing
#                      `pqc-ml-dsa` re-export) — X-Wing has no AuthEncap.
#  - `scope-privacy` — §2.2 MLS-exporter helpers + §2.4 record_id / symbol-key
#                      derivation (HMAC-SHA3-256 + HKDF-SHA3-256, both added to
#                      `hmac` / `kdf`) + the §3.4 witness cover-leaf PRF.
xchacha = ["dep:chacha20poly1305"]
hpke = ["hybrid-kex", "aes-gcm", "kdf"]
scope-privacy = ["kdf", "hmac"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
rand_core.workspace = true
rand_chacha = { version = "0.3", optional = true }
subtle = "2.6"

# Classical cryptography
p256 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
# v4.4.0+: X25519 ECDH for the key-grant wrap surface (CIRISVerify#44).
x25519-dalek = { version = "2", optional = true, default-features = false, features = ["static_secrets"] }
# v4.6.0+: ML-KEM-768 (FIPS 203 final) for the hybrid KEX surface (CIRISVerify#47).
# `getrandom` feature pulls in the convenience generate_keypair/encapsulate
# shortcuts that use OS RNG internally.
ml-kem = { version = "0.3", optional = true, default-features = false, features = ["getrandom"] }
signature.workspace = true

# secp256k1 for EVM wallet signing
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"], optional = true }
sha3 = "0.10"  # keccak256 for EVM addresses
hkdf = "0.12"  # Key derivation
hex = "0.4"    # Hex encoding for EVM addresses

# Post-quantum (choose one via feature flag)
# Pre-1.0 RC: pin EXACT (=). Caret semantics on a pre-1.0 crate allow
# patch-level breaks, and ml-dsa rc.11 (2026-05-11) realized that risk —
# removed `KeyGen` trait + `MlDsa65::from_seed` mid-stream, breaking every
# downstream consumer that fresh-resolves Cargo deps. We compile and KAT-test
# against rc.8 (matches the Cargo.lock at the v2.0.0 release). See
# CIRISVerify#18 for the incident writeup.
ml-dsa = { version = "=0.1.0-rc.8", optional = true, features = ["zeroize"] }
# Zeroes the transient `Seed` in `from_seed` + zeroizes `ExpandedSigningKey` on
# drop. NB rc.8 does NOT zeroize the outer `SigningKey.seed` (the raw seed lingers
# for the signer's lifetime — upstream gap, AV-17 transient, tracked CIRISVerify#87).
zeroize = { version = "1", optional = true }

# v2.0.2: ml-dsa rc.8 transitively pulls pkcs8 via `^0.11.0-rc.11`, which
# caret-resolves to `pkcs8 0.11.0` (stable, 2026-04-27). Between rc.11
# (2026-02-11) and rc.12+stable (2026-04-27), pkcs8 changed
# `Error::KeyMalformed` from a unit variant to a function-like variant
# `KeyMalformed(KeyError)`. ml-dsa rc.8 still uses it as the unit form
# in `.map_err(|_| ::pkcs8::Error::KeyMalformed)?,` at its lib.rs:200-206,
# which under rc.12+/stable produces a function-pointer Result that `?`
# can't convert. The last working point on the 0.11.x line is rc.11.
# Forcing the resolver to pick rc.11 via this explicit top-level dep is
# the federation crypto authority pattern in action: we own the
# resolution of every crypto-transitive in one place. Tested: with this
# pin, `rm -f Cargo.lock && cargo build` fresh-resolves cleanly. See
# CIRISVerify#18 (reopened comment-stream).
pkcs8 = { version = "=0.11.0-rc.11", optional = true, default-features = false }
aws-lc-rs = { version = "1.5", features = ["unstable"], optional = true }

# v2.0+ — symmetric / MAC primitives. PBKDF2 is a separate dep from hkdf
# because RustCrypto split them across crates.
#
# v2.8.0+ (CIRISVerify#26): AES-256-GCM is `ring`, not RustCrypto
# `aes-gcm`. ring's hand-tuned AES-NI + CLMUL is 3–5× faster (~1 GiB/s →
# ~3–5 GiB/s) and adds zero build cost: ring is already a universal
# dependency here — rustls pulls it via reqwest + hickory-resolver on
# every target we ship. See the `aes_gcm` module docs for the full
# rationale.
ring = { version = "0.17", optional = true }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"], optional = true }
hmac = { version = "0.12", optional = true }

# v6.3.0+ (CIRISVerify#82): XChaCha20-Poly1305 AEAD for the scope-native
# privacy surface. Same crate + version already vendored by
# ciris-verify-core's offline cache (cache.rs), so no new lockfile entry.
chacha20poly1305 = { version = "0.10", optional = true }

# v4.8.x+ (CIRISVerify#53): liboqs cross-check bench dep. Cargo
# disallows `optional = true` on `[dev-dependencies]`, so the dep
# lives here gated on `bench-liboqs`. liboqs is built from source via
# `oqs-sys`'s cmake build script — expensive — so the feature is OFF
# by default and only flipped on for the comparison bench.
oqs = { version = "0.11", default-features = false, features = ["std", "ml_kem", "ml_dsa"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hex = "0.4"
proptest = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }
# v4.4.0: key-grant tests round-trip the KeyGrantWrap struct through JSON.
serde_json = "1"

[[bench]]
name = "federation_crypto"
harness = false
# Exercises the v2.0+ federation crypto authority surface; needs the
# feature-gated modules. `cargo bench` with default features skips this
# (Cargo honors required-features); bench.yml + the CI compile-check
# pass the feature set explicitly.
#
# v4.8.x added `ml-kem` / `hybrid-kex` / `key-grant` / `x25519` to the
# required set for the new bench groups (CIRISVerify#53 cross-check
# against liboqs AVX2 + OpenMLS TreeKEM rekey).
required-features = [
    "aes-gcm",
    "kdf",
    "hmac",
    "pqc-ml-dsa",
    "ml-kem",
    "x25519",
    "hybrid-kex",
    "key-grant",
]

# v4.8.x+ (CIRISVerify#53): liboqs AVX2 reference cross-check.
# OFF by default — `oqs-sys` builds liboqs via cmake (~30s warm,
# multi-minute cold) and needs libclang + GCC internal headers. Run:
#   cargo bench -p ciris-crypto --bench liboqs_comparison \
#     --features bench-liboqs,ml-kem,pqc-ml-dsa
# See benches/liboqs_comparison.rs module docs for full env notes.
[[bench]]
name = "liboqs_comparison"
harness = false
required-features = ["bench-liboqs", "ml-kem", "pqc-ml-dsa"]
